# constraints

./: '  Cargo.toml  README.md  data
src/: candidate.rs  city_writer.rs  genetic_algorithm.rs  interactive_cli.rs  main.rs  tsp.rs
src/genetic_algorithm/: candidate.rs  genetic_algorithm.rs  genetic_algorithm_candidate.rs  mod.rs  selection.rs
src/simualted_annealing/: mod.rs  simulated_annealing.rs  simulated_annealing_candidate.rs
src/visualisation/: egui_struct.rs  mod.rs  plotting.rs
