[package]
name = "genetic_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
crossterm = "0.28.1"
eframe = "0.28.1"
egui = "0.28.1"
egui_plot = "0.28.1"
getopts = "0.2.21"
getrandom = "0.2.10"
rand = "0.8.5"
rand_distr = "0.4.3"
